--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-image: url(%PUBLIC_URL%/img/common-background.jpg)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
