--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Newshub | News and updates from your favorite sources</title>
   </head>
   <body style="background-image: url(%PUBLIC_URL%/img/common-background.jpg)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
